--- a/assets/sccs/core/_global.scss
+++ b/assets/sccs/core/_global.scss
@@ -9,7 +9,7 @@ html {
 
 body {
   overflow-x: hidden;
-  hyphens: auto!important;
+  //hyphens: auto!important;
   margin: 0;
   background: $wl-bgcolor-body;
 }
