--- a/templates/_include-block-components/modul_allesNeue.twig
+++ b/templates/_include-block-components/modul_allesNeue.twig
@@ -1,39 +1,42 @@
-<div class="anchor" id="{{ 'anker' ~ blockid }}"></div>
-<section class="wrapper-outer modul-allesNeue">
-    <section class="wl-wrapper">
+{% set showModul = (block.modulAusblenden)? false : true %}
+{% if showModul %}
+    <div class="anchor" id="{{ 'anker' ~ blockid }}"></div>
+    <section class="wrapper-outer modul-allesNeue">
+        <section class="wl-wrapper">
 
-        <div class="grid-container content-grid-12 bgKreis">
+            <div class="grid-container content-grid-12 bgKreis">
 
-            {% set headline = block.headline|default(false) %}
-            {% if headline %}
-                <div class="allesNeueHeadline">
-                    <h2>{{ headline }}</h2>
-                </div>
-            {% endif %}
-
-            <div class="articleContainerLinks text">
-                {{ block.text }}
-            </div>
-
-            <div class="articleContainerRechts">
-                {% set entries = craft.entries().orderBy('startDate desc').limit('2') %}
-                {% set counter = '1' %}
-                {% if entries|length > 0 %}
-                    {% for entry in entries %}
-                        <div class="allesNeueText strong">
-                            <a href="{{ entry.url }}">{{ entry.teaserText }}</a>
-                        </div>
-                        {% if counter == 1 %}
-                        <div class="allesNeueTrenner"></div>
-                        {% endif %}
-                        {% set counter = counter + 1%}
-                    {% endfor %}
+                {% set headline = block.headline|default(false) %}
+                {% if headline %}
+                    <div class="allesNeueHeadline">
+                        <h2>{{ headline }}</h2>
+                    </div>
                 {% endif %}
+
+                <div class="articleContainerLinks text">
+                    {{ block.text }}
+                </div>
+
+                <div class="articleContainerRechts">
+                    {% set entries = craft.entries().orderBy('startDate desc').limit('2') %}
+                    {% set counter = '1' %}
+                    {% if entries|length > 0 %}
+                        {% for entry in entries %}
+                            <div class="allesNeueText strong">
+                                <a href="{{ entry.url }}">{{ entry.teaserText }}</a>
+                            </div>
+                            {% if counter == 1 %}
+                            <div class="allesNeueTrenner"></div>
+                            {% endif %}
+                            {% set counter = counter + 1%}
+                        {% endfor %}
+                    {% endif %}
+                </div>
+
             </div>
 
-        </div>
-
+        </section>
     </section>
-</section>
+{% endif %}
 
 
