--- a/assets/sccs/components/_accordion.scss
+++ b/assets/sccs/components/_accordion.scss
@@ -127,6 +127,8 @@
 
           label {
 
+            color: $wl-color-blue-dark;
+
             &.lableOff{
                 transition: $transition;
                 &::after {
