--- a/assets/sccs/components/_modul_boxBlau.scss
+++ b/assets/sccs/components/_modul_boxBlau.scss
@@ -78,6 +78,10 @@
                       @include dynamic-distance($min-bottomAbstandHeadline, $max-bottomAbstandHeadline, padding-bottom);
                     }
 
+                    h2{
+                      color: $wl-color-white;
+                    }
+
               }
 
 
