--- a/assets/sccs/components/_modul_auszeichnung.scss
+++ b/assets/sccs/components/_modul_auszeichnung.scss
@@ -63,6 +63,11 @@
                     padding-bottom: 20px;
                     color: $wl-color-white;
 
+
+                    h2{
+                      color: $wl-color-white;
+                    }
+
               }
 
               .fliesstext {
