--- a/assets/sccs/components/_navigation-style.scss
+++ b/assets/sccs/components/_navigation-style.scss
@@ -51,7 +51,7 @@ NAVIGATION
       z-index: 1;
       text-decoration: none;
       text-align: center;
-      color: #000000;
+      color: $wl-color-blue-dark;;
       white-space: nowrap;
       cursor: pointer;
 
