--- a/assets/sccs/components/_modul_sliderInfoTeaser.scss
+++ b/assets/sccs/components/_modul_sliderInfoTeaser.scss
@@ -111,6 +111,7 @@
                   text-align: center;
                   @include responsive-font(18px, 23px, $font-family-DINNextLTPro-bold, 1.34);
                   margin-bottom: 20px;
+                  hyphens: auto!important;
                 }
 
 
