--- a/assets/sccs/core/_global.scss
+++ b/assets/sccs/core/_global.scss
@@ -9,7 +9,7 @@ html {
 
 body {
   overflow-x: hidden;
-  //hyphens: auto!important;
+  hyphens: auto!important;
   margin: 0;
   background: $wl-bgcolor-body;
 }
@@ -131,6 +131,8 @@ i{
 }
 
 .text {
+
+  hyphens: none!important;
 
   .h2box{
     margin-bottom: 20px;
