--- a/assets/sccs/core/_typography.scss
+++ b/assets/sccs/core/_typography.scss
@@ -86,6 +86,7 @@ h1, .h1 {
 
   margin-top: 0;
   margin-bottom: -0.2em;
+  hyphens: auto!important;
 
   span{
     &.produktNr{
@@ -102,8 +103,11 @@ h2, .h2 {
   @include responsive-font(28px, 45px, $h2-font-family, $base-line-height-h2);
 
   margin-top: 0;
-  margin-bottom: -0.2em;;;
+  margin-bottom: -0.2em;
+  hyphens: auto!important;
+
 }
+
 
 h3, .h3 {
   color: $wl-color-blue-dark;
@@ -113,7 +117,11 @@ h3, .h3 {
 
   margin-top: 0;
   margin-bottom: -0.2em;
+  hyphens: auto!important;
+
 }
+
+
 h4, .h4 {
   color: $wl-color-blue-dark;
 
@@ -122,7 +130,10 @@ h4, .h4 {
 
   margin-top: 0;
   margin-bottom: -0.2em;
+  hyphens: auto!important;
+
 }
+
 
 .textBold {
   @include responsive-font(18px, 23px, $font-family-DINNextLTPro-bold, 1.34);
