--- a/templates/_include-block-components/modul_produkte.twig
+++ b/templates/_include-block-components/modul_produkte.twig
@@ -80,7 +80,7 @@
     {% for elemente in allCategory %}
         {% set counter = counter + 1 %}
         {% set categoryStr  = (counter == 1)? elemente.id : categoryStr  ~ ',' ~ elemente.id  %}
-        {% set buttonArr = buttonArr|merge({ (loop.index)  :  '<a href="?#result" class="themenBtn" data-output="' ~ elemente.id ~ '">' ~ elemente.title  ~ '</a>' }) %}
+        {% set buttonArr = buttonArr|merge({ (loop.index)  :  '<a  class="themenBtn" data-output="' ~ elemente.id ~ '">' ~ elemente.title  ~ '</a>' }) %}
     {% endfor %}
 
 
@@ -110,7 +110,7 @@
             <div class="modul-produkt-themenfilter">
                 <ul>
 
-                    <li class="themenfilterbutton"><a href="?#result" class="themenBtn btnAll highlight" data-output="{{ categoryStr }}">{{ block.buttonText }} ({{ alleArticelCount }})</a></li>
+                    <li class="themenfilterbutton"><a class="themenBtn btnAll highlight" data-output="{{ categoryStr }}">{{ block.buttonText }} ({{ alleArticelCount }})</a></li>
 
                     {% for btn in buttonArr %}
                     <li class="themenfilterbutton">{{ btn|raw }}</li>
