--- a/templates/_ajax-feedback/jobs.twig
+++ b/templates/_ajax-feedback/jobs.twig
@@ -141,7 +141,7 @@
                        {% set counter = counter + 1%}
                   {% endfor %}
              {% else %}
-                  {{ block.infoTextErgebnise }}
+                  {{ block.keineEintraegeVorhanden }}
              {% endif %}
 
 </div>
