--- a/templates/_include-block-components/modul_jobs.twig
+++ b/templates/_include-block-components/modul_jobs.twig
@@ -22,6 +22,7 @@
         });
 
 
+        /*
         if ($("#masonry-effect").length > 0) {
             setMasonryHeight();
         }
@@ -33,6 +34,8 @@
             }
 
         })
+
+         */
 
     });
 
@@ -93,14 +96,14 @@
     {% for elemente in allCategory %}
         {% set counter = counter + 1 %}
         {% set categoryStr  = (counter == 1)? elemente.id : categoryStr  ~ ',' ~ elemente.id  %}
-        {% set buttonArr = buttonArr|merge({ (loop.index)  :  '<a href="?#result" class="themenBtn" data-output="' ~ elemente.id ~ '">' ~ elemente.title  ~ '</a>' }) %}
+        {% set buttonArr = buttonArr|merge({ (loop.index)  :  '<a class="themenBtn" data-output="' ~ elemente.id ~ '">' ~ elemente.title  ~ '</a>' }) %}
     {% endfor %}
 
         <div class="themenfilter grid-container content-grid-12">
             <div class="modul-jobs-themenfilter">
                 <ul>
 
-                    <li class="themenfilterbutton"><a href="?#result" class="themenBtn btnAll highlight" data-output="{{ categoryStr }}">{{ block.alleEintraege }}</a></li>
+                    <li class="themenfilterbutton"><a class="themenBtn btnAll highlight" data-output="{{ categoryStr }}">{{ block.alleEintraege }}</a></li>
 
                     {% for btn in buttonArr %}
                         <li class="themenfilterbutton">{{ btn|raw }}</li>
