--- a/templates/_ajax-feedback/haendler.twig
+++ b/templates/_ajax-feedback/haendler.twig
@@ -273,7 +273,7 @@ pageid          => ID der "Content Page" Seite welches über das entprechende Mo
 
                                      {% if haendlerMail != '' %}
                                      <div class="artikel-mail">
-                                         <a target="_blank" data-email="{{ haendlerMailData }}">{{ translation.t_mail }}</a>
+                                         <a target="_blank" data-email="{{ haendlerMailData }}">{{ haendlerMail }}</a>
                                      {% endif %}
                                      </div>
 
