--- a/templates/_include-block-components/modul_sliderHistory.twig
+++ b/templates/_include-block-components/modul_sliderHistory.twig
@@ -18,18 +18,19 @@
 
                                     {% set entryItems = craft.entries().section('history') %}
                                     {% for items in entryItems %}
-
+                                        {% set startItem = (items.start == '1')? '#1372D0' : '#31c390' %}
+                                        {% set startColorClassName = (items.start == '1')? ' startColor' : '' %}
                                         <article>
 
                                             <div class="line">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
-                                                    <circle id="Ellipse_1" data-name="Ellipse 1" cx="10.5" cy="10.5" r="10.5" fill="#31c390"/>
+                                                    <circle id="Ellipse_1" data-name="Ellipse 1" cx="10.5" cy="10.5" r="10.5" fill="{{ startItem }}"/>
                                                 </svg>
                                             </div>
                                             <div class="article-content">
-                                                <div class="articleJahreszahl"><h4>{{ items.jahreszahl }}</h4></div>
-                                                <div class="articleHeadline textBold">{{ items.teaserHeadline }}</div>
-                                                <div class="articleText text">{{ items.teaserText }}</div>
+                                                <div class="articleJahreszahl{{ startColorClassName }}"><h4>{{ items.jahreszahl }}</h4></div>
+                                                <div class="articleHeadline textBold{{ startColorClassName }}">{{ items.teaserHeadline }}</div>
+                                                <div class="articleText text{{ startColorClassName }}">{{ items.teaserText }}</div>
                                             </div>
 
                                         </article>
@@ -52,11 +53,11 @@
         $('#slider-history{{ blockid }}').slick({
             dots: false,
             infinite: true,
-            speed: 2000,
+            speed: 1000,
             autoplay: false,
-            autoplaySpeed: 4000,
+            autoplaySpeed: 3000,
             slidesToShow: 3,
-            slidesToScroll: 1,
+            slidesToScroll: 3,
             responsive: [
                 {
                     breakpoint: 1000,
