--- a/assets/sccs/components/_pagination-haendler-aktuelles-jobs-produktFilter.scss
+++ b/assets/sccs/components/_pagination-haendler-aktuelles-jobs-produktFilter.scss
@@ -1,4 +1,4 @@
-.modul-haendlerFilter, .modul-aktuelles, .modul-jobs{
+.modul-haendlerFilter, .modul-aktuelles, .modul-jobs, .modul-produktFilter{
 
   .pagination-container{
     padding-top: 80px;
