--- a/templates/_ajax-feedback/produkt.twig
+++ b/templates/_ajax-feedback/produkt.twig
@@ -230,38 +230,55 @@
 
 </div>
 
+
 {% if pager %}
-  <div class="blog-pagination-container">
+    <div class="pagination-container">
 
-      <div class="blog-pagination">
+        <div class="pagination">
 
-          <div class="blog-pagination-arrow-left">
-               <a class="btnPager links {% if not pageInfo.prevUrl %} disabled{% endif %}"{% if pageInfo.prevUrl %} data-more="{{ pageInfo.prevUrl }}#articles"{% endif %}>
-                   <svg xmlns="http://www.w3.org/2000/svg" width="19.014" height="19.014" viewBox="0 0 19.014 19.014">
-                       <path id="arrow_forward_FILL0_wght400_GRAD0_opsz48" d="M17.507,27.014l1.248-1.277L11.417,18.4h15.6V16.616h-15.6l7.338-7.338L17.507,8,8,17.507Z" transform="translate(-8 -8)" fill="#000"/>
-                   </svg>
-               </a>
-          </div>
+            <div class="pagination-arrow-left">
+                {% if not pageInfo.prevUrl %}
+                    <span class="links disabled">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+                          <path id="Vereinigungsmenge_52" data-name="Vereinigungsmenge 52" d="M6.358,2.425l5,4.881H0v3.387H11.357l-5,4.881L8.783,18,18,9,8.783,0Z" transform="translate(18 18) rotate(180)" fill="#1372d0"/>
+                        </svg>
+                    </span>
+                {% else %}
+                    <a class="btnPager links"{% if pageInfo.prevUrl %} data-more="{{ pageInfo.prevUrl }}"{% endif %}>
+                        <svg id="pagination-arrow-left" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+                            <path id="pagination-arrow-left-fill" data-name="Vereinigungsmenge 52" d="M6.358,2.425l5,4.881H0v3.387H11.357l-5,4.881L8.783,18,18,9,8.783,0Z" transform="translate(18 18) rotate(180)" fill="#1372d0"/>
+                        </svg>
+                    </a>
+                {% endif %}
+            </div>
 
-          <div class="blog-pagination-arrow-counter">
-              <div class="blog-pagination-arrow-counter-inner">
-                  {% for i in range(1,pageInfo.totalPages) %}
-                      <a class="btnPager {% if pageInfo.currentPage == loop.index %} active{% endif %}" data-more="{{ myUrl }}/p{{loop.index}}{{ param }}">{{loop.index}}</a>
-                  {% endfor %}
-              </div>
-          </div>
+            <div class="pagination-arrow-counter">
+                <div class="pagination-arrow-counter-inner">
+                    {% for i in range(1,pageInfo.totalPages) %}
+                        <a class="btnPager {% if pageInfo.currentPage == loop.index %} active{% endif %}" data-more="{{ myUrl }}/p{{loop.index}}{{ param }}">{{loop.index}}</a>
+                    {% endfor %}
+                </div>
+            </div>
 
-          <div class="blog-pagination-arrow-right">
-               <a class="btnPager rechts {% if not pageInfo.nextUrl %} disabled{% endif %}"{% if pageInfo.nextUrl %} data-more="{{ pageInfo.nextUrl }}#articles"{% endif %}>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="19.014" height="19.014" viewBox="0 0 19.014 19.014">
-                      <path id="arrow_forward_FILL0_wght400_GRAD0_opsz48" d="M17.507,27.014l-1.248-1.277L23.6,18.4H8V16.616H23.6L16.259,9.277,17.507,8l9.507,9.507Z" transform="translate(-8 -8)" fill="#000"/>
-                    </svg>
-               </a>
-          </div>
+            <div class="pagination-arrow-right">
+                {% if not pageInfo.nextUrl %}
+                    <span class="rechts disabled">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="17.094" height="16.957" viewBox="0 0 17.094 16.957">
+                            <path id="arrow_forward_FILL0_wght400_GRAD0_opsz48_3_-_Kontur" data-name="arrow_forward_FILL0_wght400_GRAD0_opsz48 (3) - Kontur" d="M167.912-783.754l-1.9-1.9,5.377-5.25H159.5v-2.654h11.887l-5.377-5.251,1.9-1.9,8.683,8.479Zm-.132-1.891.143.143,6.893-6.731-6.893-6.731-.143.143,6.646,6.489H160.758v.2h13.667Z" transform="translate(-159.5 800.711)" fill="#1372d0"/>
+                        </svg>
+                    </span>
+                {% else %}
+                    <a class="btnPager rechts"{% if pageInfo.nextUrl %} data-more="{{ pageInfo.nextUrl }}"{% endif %}>
+                        <svg id="pagination-arrow-right"  xmlns="http://www.w3.org/2000/svg" width="17.094" height="16.957" viewBox="0 0 17.094 16.957">
+                            <path id="pagination-arrow-right-fill" data-name="arrow_forward_FILL0_wght400_GRAD0_opsz48 (3) - Kontur" d="M167.912-783.754l-1.9-1.9,5.377-5.25H159.5v-2.654h11.887l-5.377-5.251,1.9-1.9,8.683,8.479Zm-.132-1.891.143.143,6.893-6.731-6.893-6.731-.143.143,6.646,6.489H160.758v.2h13.667Z" transform="translate(-159.5 800.711)" fill="#1372d0"/>
+                        </svg>
+                    </a>
+                {% endif %}
+            </div>
 
-      </div>
+        </div>
 
-  </div>
+    </div>
 {% endif %}
 
 
